<resources>
    <string name="app_name">网上商城</string>
    <string name="activity_main_user_login">普通用户登录</string>
    <string name="activity_main_seller_login">销售商登录</string>
    <string name="activity_main_admin_login">系统管理员登录</string>

    <string name="activity_user_login_user_name">请输入用户名</string>
    <string name="activity_user_login_user_password">请输入密码</string>
    <string name="activity_user_login_login">登录</string>

    <string name="activity_seller_login_seller_name">请输入用户名</string>
    <string name="activity_seller_login_seller_password">请输入密码</string>
    <string name="activity_seller_login_login">登录</string>

    <string name="activity_admin_login_admin_name">请输入用户名</string>
    <string name="activity_admin_login_admin_password">请输入密码</string>
    <string name="activity_admin_login_login">登录</string>

    <string name="activity_seller_user_management_titlebar_admin_management">管理员管理平台</string>
    <string name="activity_seller_user_management_titlebar_admin_logout">退出</string>

    <string name="activity_seller_management_add_seller">添加销售商</string>
    <string name="activity_seller_management_listheader_sellerid">编号</string>
    <string name="activity_seller_management_listheader_sellername">用户名</string>
    <string name="activity_seller_management_listheader_sellerpassword">密码</string>
    <string name="activity_seller_management_listheader_sellerstatus">状态</string>

    <string name="activity_user_management_add_user">添加普通用户</string>
    <string name="activity_user_management_listheader_userid">编号</string>
    <string name="activity_user_management_listheader_username">用户名</string>
    <string name="activity_user_management_listheader_userpassword">密码</string>
    <string name="activity_user_management_listheader_isvip">会员</string>
    <string name="activity_user_management_listheader_userstatus">状态</string>

    <string name="activity_goods_orders_management_titlebar_seller_management">销售商管理平台</string>
    <string name="activity_goods_orders_management_titlebar_seller_logout">退出</string>

    <string name="activity_goods_management_add_goods">新增商品</string>

    <string name="activity_goods_add_goods_name">商品名:</string>
    <string name="activity_goods_add_goods_amounts">库存(件):</string>
    <string name="activity_goods_add_goods_price">单价(元):</string>
    <string name="activity_goods_add_goods_brief_description">简要描述:</string>
    <string name="activity_goods_add_goods_description">描述:</string>
    <string name="activity_goods_add_goods_images">图片:</string>
    <string name="activity_goods_add_add">添加商品</string>

    <string name="activity_goods_info_modify_goods_name">商品名:</string>
    <string name="activity_goods_info_modify_goods_amounts">库存(件):</string>
    <string name="activity_goods_info_modify_goods_price">单价(元):</string>
    <string name="activity_goods_info_modify_goods_brief_description">简要描述:</string>
    <string name="activity_goods_info_modify_goods_description">描述:</string>
    <string name="activity_goods_info_modify_goods_images">图片:</string>
    <string name="activity_goods_info_modify_modify">确定修改</string>
    <string name="activity_goods_info_modify_goods_kind">类别</string>

    <string name="tab_activity_user_goods">商品目录</string>
    <string name="tab_activity_user_shopping_cart">购物车</string>
    <string name="tab_activity_user_my">我的</string>
    <string name="tab_activity_user_logout">退出</string>


    <string name="activity_user_goods_goods_search">输入商品名/商品类别/商家名称搜索</string>
    <string name="activity_user_goods_goods_kind">类别:</string>
    <string name="activity_user_goods_add_to_shopping_cart">添加到购物车</string>

    <string name="activity_goods_details_goods_amounts">数量(件):</string>
    <string name="activity_goods_details_add_shopping_cart">加入购物车</string>

    <string name="activity_shopping_cart_settle_accounts">结算</string>
    <string name="activity_shopping_cart_total">总计(元):</string>

    <string name="activity_submit_order_address">收货人信息: </string>
    <string name="activity_submit_order_account">商品总额(元):</string>
    <string name="activity_submit_order_vip_discount">会员折扣:</string>
    <string name="activity_submit_order_freight">运费(元):</string>
    <string name="activity_submit_order_discount_account">折后总额(元):</string>
    <string name="activity_submit_order_submit">提交订单</string>
    <string name="activity_submit_order_cancel">取消订单</string>

    <string name="activity_my_userinfo_modify">资料修改</string>
    <string name="activity_my_order_management">订单管理</string>

    <string name="activity_user_info_modify_user_password">密码:</string>
    <string name="activity_user_info_modify_isvip">是否会员:</string>
    <string name="activity_user_info_modify_user_phone">联系方式:</string>
    <string name="activity_user_info_modify_user_email">电子邮箱:</string>
    <string name="activity_user_info_modify_user_adress">收货地址:</string>
    <string name="activity_user_info_modify_cancel_modify">取消修改</string>
    <string name="activity_user_info_modify_submit_modify">提交修改</string>

    <string name="activity_my_order_management_order_status">订单状态:</string>

    <string name="activity_my_order_management_listitem_order_id">订单编号:</string>
    <string name="activity_my_order_management_listitem_account">实付款(元):</string>
    <string name="activity_my_order_management_listitem_order_datetime">下单时间:</string>
    <string name="activity_my_order_management_listitem_order_status">订单状态:</string>
    <string name="activity_my_order_management_listitem_mark">X</string>

    <string name="titlebar_search_search_keyword">请输入搜索关键字</string>
    <string name="titlebar_search_search">搜索</string>

    <string name="activity_order_details_order_id">订单编号:</string>
    <string name="activity_order_details_order_account">实付款(元):</string>
    <string name="activity_order_details_order_datetime">下单时间:</string>
    <string name="activity_order_details_order_status">订单状态:</string>
    <string name="activity_order_details_mark">X</string>
    <string name="activity_order_details_back">返回</string>

    <string name="activity_my_order_management_order_search">输入商品名/商品编号/订单号/商家名称搜索</string>

    <string name="activity_seller_orders_management_order_status">订单状态</string>
    <string name="activity_seller_orders_management_order_confirm">订单确认</string>
    <string name="activity_seller_orders_management_order_reject">订单驳回</string>

    <string name="activity_seller_orders_management_listitem_order_id">订单编号:</string>
    <string name="activity_seller_orders_management_listitem_user_id">用户编号:</string>
    <string name="activity_seller_orders_management_listitem_order_account">实付款(元):</string>
    <string name="activity_seller_orders_management_listitem_order_datetime">下单时间:</string>
    <string name="activity_seller_orders_management_listitem_order_status">订单状态:</string>
    <string name="activity_seller_orders_management_listitem_mark">X</string>

</resources>
