<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_user_listitem_user_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:hint="@string/activity_user_management_listheader_username"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edt_user_listitem_user_password"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:hint="@string/activity_user_management_listheader_userpassword"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_user_listitem_add_user"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/activity_user_management_add_user"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/activity_user_management_listheader_userid"
            android:gravity="center"
            android:textSize="25dp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_user_management_listheader_username"
            android:gravity="center"
            android:textSize="25dp" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_user_management_listheader_userpassword"
            android:gravity="center"
            android:textSize="25dp" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_user_management_listheader_isvip"
            android:gravity="center"
            android:textSize="25dp" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_user_management_listheader_userstatus"
            android:gravity="center"
            android:textSize="25dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_users"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="5dp"></ListView>

</LinearLayout>