<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_admin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_admin_login_admin_name"
        android:textAlignment="center"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/edt_admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_admin_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_admin_login_admin_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btn_admin_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_admin_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_admin_login_login"
        android:textAlignment="center"
        android:textSize="40dp" />


</RelativeLayout>