<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_seller_login_seller_name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/edt_seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_seller_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_seller_login_seller_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btn_seller_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_seller_password"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/activity_seller_login_login"
        android:textAlignment="center"
        android:textSize="40dp" />

</RelativeLayout>