<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_goods_add_goods_name"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_add_goods_name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_name"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_name"
        android:gravity="center_vertical"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txt_goods_add_goods_amounts"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_goods_add_goods_name"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_add_goods_amounts"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_amounts"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_amounts"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt_goods_add_goods_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_amounts"
        android:gravity="center_vertical"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txt_goods_add_goods_price"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_goods_add_goods_amounts"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_add_goods_price"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_price"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_price"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt_goods_add_goods_amounts"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_price"
        android:gravity="center_vertical"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txt_goods_add_goods_kind"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_goods_add_goods_price"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_info_modify_goods_kind"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_kind"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_kind"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt_goods_add_goods_price"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_kind"
        android:gravity="center_vertical"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txt_goods_add_goods_brief_description"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_goods_add_goods_kind"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/activity_goods_add_goods_brief_description"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_brief_description"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_brief_description"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt_goods_add_goods_kind"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_brief_description"
        android:gravity="center_vertical"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txt_goods_add_goods_description"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_below="@id/txt_goods_add_goods_brief_description"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_add_goods_description"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_goods_add_goods_description"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_alignBottom="@id/txt_goods_add_goods_description"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt_goods_add_goods_brief_description"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txt_goods_add_goods_description"
        android:gravity="start" />

    <TextView
        android:id="@+id/txt_goods_add_goods_images"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_below="@id/txt_goods_add_goods_description"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_goods_add_goods_images"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_goods_add_add"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/txt_goods_add_goods_images"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/activity_goods_add_add"
        android:textSize="20dp" />
</RelativeLayout>