<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/activity_seller_orders_management_order_status"
            android:textSize="25dp" />

        <Spinner
            android:id="@+id/spinner_seller_orders_management_order_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_seller_orders_management_orders"
        android:layout_width="match_parent"
        android:layout_height="395dp"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_seller_orders_management_order_reject"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/activity_seller_orders_management_order_reject"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_seller_orders_management_order_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/activity_seller_orders_management_order_confirm"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>